--- a/viteproject/index.html
+++ b/viteproject/index.html
@@ -7,7 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <div class="box">
+    </div>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
