--- a/viteproject/index.html
+++ b/viteproject/index.html
@@ -7,6 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
+    <button class="batman" type="submit">Button</button>
     <div class="box">
     </div>
     <script type="module" src="js/main.js"></script>
