--- a/viteproject/index.html
+++ b/viteproject/index.html
@@ -7,7 +7,19 @@
     <title>Vite App</title>
   </head>
   <body>
-    <button class="batman" type="submit">Button</button>
+  <div class="batmen">
+    <button class = "robin" id="fairy" type="submit">Show All</button>
+    <button class = "batman" id="fairy" type="submit">Fairy</button>
+    <button class = "batman" id="fire" type="submit">Fire</button>
+    <button class = "batman" id="flying" type="submit">Flying</button>
+    <button class = "batman" id="fighting" type="submit">Fighting</button>
+    <button class = "batman" id="dragon" type="submit">Dragon</button>
+    <button class = "batman" id="electric" type="submit">Electric</button>
+    <button class = "batman" id="dark" type="submit">Fairy</button>
+    <button class = "batman" id="normal" type="submit">Normal</button>
+    <button class = "batman" id="ground" type="submit">Ground</button>
+    
+  </div>
     <div class="box">
     </div>
     <script type="module" src="js/main.js"></script>
