--- a/viteproject/index.html
+++ b/viteproject/index.html
@@ -9,6 +9,8 @@
   <body>
     <div class="box">
     </div>
+    <h2 class = "text2">Type: ${type}</h2>
+    <p class = "text2">Type: ${type}</p>
     <script type="module" src="js/main.js"></script>
   </body>
 </html>
