--- a/viteproject/index.html
+++ b/viteproject/index.html
@@ -7,10 +7,19 @@
     <title>Vite App</title>
   </head>
   <body>
+    <div class="batmen">
+      <button class="batman" id = "fairy" type="submit">Fairy</button>
+      <button class="batman" id = "fire" type="submit">Fire</button>
+      <button class="batman" id = "flying" type="submit">Flying</button>
+      <button class="batman" id = "fighting" type="submit">Fighting</button>
+      <button class="batman" id = "ground" type="submit">Ground</button>
+      <button class="batman" id = "dragon" type="submit">Dragon</button>
+      <button class="batman" id = "electric" type="submit">Electric</button>
+      <button class="batman" id = "dark" type="submit">Dark</button>
+      <button class="batman" id = "normal" type="submit">Normal</button>
+    </div>
     <div class="box">
     </div>
-    <h2 class = "text2">Type: ${type}</h2>
-    <p class = "text2">Type: ${type}</p>
     <script type="module" src="js/main.js"></script>
   </body>
 </html>
