--- a/viteproject/index.html
+++ b/viteproject/index.html
@@ -7,7 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
+
     <div class="batmen">
+      <button class="robin" id = "all" type="submit">All Cards</button>
       <button class="batman" id = "fairy" type="submit">Fairy</button>
       <button class="batman" id = "fire" type="submit">Fire</button>
       <button class="batman" id = "flying" type="submit">Flying</button>
