--- a/viteproject/index.html
+++ b/viteproject/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body>
-
+  <body class="cool">
+    <h1 class="name">Pokemon Card Store</h1>
     <div class="batmen">
+  
+      <button class="btn" id="class" type="button">Warm</button>
       <button class="robin" id = "all" type="submit">All Cards</button>
       <button class="batman" id = "fairy" type="submit">Fairy</button>
       <button class="batman" id = "fire" type="submit">Fire</button>
@@ -25,3 +27,4 @@
     <script type="module" src="js/main.js"></script>
   </body>
 </html>
+<!-- <p class="description">${description}</p> -->
