--- a/viteproject/index.html
+++ b/viteproject/index.html
@@ -20,6 +20,8 @@
       <button class="batman" id = "electric" type="submit">Electric</button>
       <button class="batman" id = "dark" type="submit">Dark</button>
       <button class="batman" id = "normal" type="submit">Normal</button>
+      <button class="batman" id = "meow Meow" type="submit">Meow Meow</button>
+      <button class="batman" id = "ghost" type="submit">Mr.Whalen</button>
       <button class="robin" id = "all" type="submit">All Cards</button>
     </div>
     <div class="box">
